--- a/demo.tex
+++ b/demo.tex
@@ -11,7 +11,7 @@
 \usepackage{pdfpc-commands}%for pdfpc movies
 \usepackage{pdfpc-latex-notes/pdfpcnotes}%for pdfpc notes
 
-\graphicspath{{./images/}{./logos/}}
+\graphicspath{{./logos/}}
 
 %% Title Page Parameters
 \title{Demo Presentation}
